--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai": "^3.5.0",
     "del": "^1.2.0",
     "gulp": "^3.8.11",
+    "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
