--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/chai": "^3.5.2",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.22",
     "chai": "^3.5.0",
     "del": "^1.2.0",
     "gulp": "^3.8.11",
@@ -37,7 +40,7 @@
     "merge2": "^0.3.6",
     "mocha": "^2.2.5",
     "source-map-support": "^0.2.10",
-    "typescript": "^1.9.0-dev.20160205"
+    "typescript": "^2.4.0-dev.20170525"
   },
   "author": {
     "name": "Ron Buckton",
