--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -3,9 +3,11 @@
     "target": "es6",
     "module": "commonjs",
     "lib": ["esnext", "dom"],
+    "outDir": "../../out/lib",
     "stripInternal": true,
     "declaration": true,
-    "outDir": "../../out/lib",
-    "strict": true
-  }
+    "strict": true,
+    "composite": true
+  },
+  "include": ["**/*.ts"]
 }
